src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsT-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 640 × 0, bounds: 1280 × 720, states: []
size: 640 × 0, bounds: 1280 × 720, states: [Activated]
